compartilhando códigos secretamente

--- a/src/firstsub.ipynb
+++ b/src/firstsub.ipynb
@@ -314,8 +314,8 @@
     "sns.set_theme(context=\"notebook\")\n",
     "\n",
     "## data\n",
-    "test = pd.read_csv('./test.csv', index_col='Id')\n",
-    "dT = pd.read_csv('./train.csv', index_col='Id')\n",
+    "test = pd.read_csv('../test.csv', index_col='Id')\n",
+    "dT = pd.read_csv('../train.csv', index_col='Id')\n",
     "dT"
    ]
   },
@@ -339,7 +339,7 @@
     "def show_imgs(n,df):\n",
     "    for i in range(n):\n",
     "        atual = '1'+str(n)+str(i+1)\n",
-    "        caminho = './train/'+dT.sample(n=1).index[0]+'.jpg'\n",
+    "        caminho = '../train/'+dT.sample(n=1).index[0]+'.jpg'\n",
     "        plt.subplot(int(atual))\n",
     "        plt.imshow(plt.imread(caminho));\n",
     "\n",
